# twitter-interest-inference

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
src/twitter_interest/: aggregation.py  api.py  api_client.py  cli.py  interest_extractor.py  logging_config.py  neo4j_client.py  service.py  settings.py
tests/: test_aggregator.py  test_interest_extractor.py  test_service.py
