[project]
name = "Twitter Interest Inference"  
version = "0.1.0"                    
description = "CLI for Twitter interest inference"
readme = "README.md"                 
requires-python = ">=3.8"

[project.scripts]
twitter-interest = "twitter_interest.cli:main"

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]